Add background and title

--- a/array-methods.html
+++ b/array-methods.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Array methods</title>
+  <title>Array methods!</title>
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
+  <h1>Array methods!</h1>
 <script>
   let numbers = [4, 8, 15, 16, 23, 42];
   const resetNumbersArray = () => { numbers = [4, 8, 15, 16, 23, 42] };
