--- a/async-await-multiple.html
+++ b/async-await-multiple.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Multiple promises with Async Await</title>
+  <title>Multiple promises with Async Await!</title>
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
+  <h1>Multiple promises with Async Await!</h1>
 <script>
   async function fetchThings() {
     const beers = fetch('http://api.react.beer/v2/search?q=hops&type=beer')
