--- a/async-await.html
+++ b/async-await.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Async Await</title>
+  <title>Async Await!</title>
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
+  <h1>Async Await!</h1>
 <script>
   /*
   async ensures that the function returns a promise, and wraps non-promises in it
