--- a/callbacks.html
+++ b/callbacks.html
@@ -2,9 +2,11 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Callbacks</title>
+  <title>Callbacks!</title>
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
+  <h1>Callbacks!</h1>
 <script>
   function sayHi() {
     console.log('hi!');
