--- a/classes.html
+++ b/classes.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Classes</title>
+  <title>Classes!</title>
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
+  <h1>Classes!</h1>
 <script>
   /*
   prototypal inheritance
