--- a/closure.html
+++ b/closure.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Closure</title>
+  <title>Closure!</title>
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
+  <h1>Closure!</h1>
 <script>
   /*
   every function or code block can access the variables of its outer scopes
