--- a/conditional-execution.html
+++ b/conditional-execution.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Conditional execution</title>
+  <title>Conditional execution!</title>
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
+  <h1>Conditional execution!</h1>
 <script>
   /*
   if, else if, else
