--- a/default-function-parameters.html
+++ b/default-function-parameters.html
@@ -2,14 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Default function parameters</title>
+  <title>Default function parameters!</title>
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
-<main>
-  <div class="square" id="square"></div>
-  <button id="colorButton">Color</button>
-</main>
-<style>
+  <h1>Default function parameters!</h1>
+  <main>
+    <div class="square" id="square"></div>
+    <button id="colorButton">Color</button>
+  </main>
+<style type="text/css">
   .square {
     border: 4px solid black;
     height: 200px;
