--- a/destructuring-arrays.html
+++ b/destructuring-arrays.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Destructuring arrays</title>
+  <title>Destructuring arrays!</title>
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
+  <h1>Destructuring arrays!</h1>
 <script>
   const numbers = [1, 2, 3, 4, 5, 6, 7, 8];
 
