--- a/destructuring-objects.html
+++ b/destructuring-objects.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Destructuring objects</title>
+  <title>Destructuring objects!</title>
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
+  <h1>Destructuring objects!</h1>
 <script>
   const user = {
     id: 234,
