--- a/functions.html
+++ b/functions.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Functions</title>
+  <title>Functions!</title>
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
-<button id="numbersButton">Numbers</button>
+  <h1>Functions!</h1>
+  <button id="numbersButton">Numbers</button>
 <script>
   // function declaration
   function log(value) {
