--- a/generators.html
+++ b/generators.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Generators</title>
+  <title>Generators!</title>
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
+  <h1>Generators!</h1>
 <script>
   /*
   generators: functions that can be paused and resumed
