--- a/loops.html
+++ b/loops.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Loops</title>
+  <title>Loops!</title>
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
+  <h1>Loops!</h1>
 <script>
   let i = 0;
 
