--- a/maps.html
+++ b/maps.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Maps and weakmaps</title>
+  <title>Maps and weakmaps!</title>
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
+  <h1>Maps and weakmaps!</h1>
 <script>
   /*
   map
