--- a/objects.html
+++ b/objects.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Objects</title>
+  <title>Objects!</title>
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
+  <h1>>Objects!</h1>
 <script>
   const person = {
     name: 'Mary Poppins',
