--- a/promises-chaining.html
+++ b/promises-chaining.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Promises chaining</title>
+  <title>Promises chaining!</title>
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
+  <h1>Promises chaining!</h1>
   <script>
   /*
   A call to promise.then returns a promise, so we can chain another .then on it.
