--- a/promises-multiple.html
+++ b/promises-multiple.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Multiple promises</title>
+  <title>Multiple promises!</title>
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
+  <h1>Multiple promises!</h1>
 <script>
   const beers = fetch('http://api.react.beer/v2/search?q=hops&type=beer')
     .then(response => response.json());
