--- a/promises.html
+++ b/promises.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Promises</title>
+  <title>Promises!</title>
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
+  <h1>Promises!</h1>
 <script>
   /*
   We have:
