--- a/proxies.html
+++ b/proxies.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Proxies</title>
+  <title>Proxies!</title>
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
+  <h1>Proxies!</h1>
 <script>
   /*
   allow to overwrite an obj's default operations
