--- a/rest-parameters.html
+++ b/rest-parameters.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Rest parameters</title>
+  <title>Rest parameters!</title>
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
+  <h1>Rest parameters!</h1>
 <script>
   // packs multiple elements into a single array
 
