--- a/scope.html
+++ b/scope.html
@@ -2,9 +2,11 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Scope</title>
+  <title>Scope!</title>
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
+  <h1>Scope!</h1>
 <script>
   /*
   global scope
