--- a/sets.html
+++ b/sets.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Sets and weaksets</title>
+  <title>Sets and weaksets!</title>
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
+  <h1>Sets and weaksets!</h1>
 <script>
   /*
   sets
