--- a/spread-operator.html
+++ b/spread-operator.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Spread operator</title>
+  <title>Spread operator!</title>
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
+  <h1>Spread operator!</h1>
 <script>
   /*
   in function calls
