--- a/string-methods.html
+++ b/string-methods.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>String methods</title>
+  <title>String methods!</title>
 </head>
 <body>
+  <h1>String methods!</h1>
 <script>
   const code = 'ARG-2018-A'
   
