--- a/symbols.html
+++ b/symbols.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Symbols</title>
+  <title>Symbols!</title>
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
+  <h1>Symbols!</h1>
 <script>
   const person = Symbol('Harry Potter');
   const anotherPerson = Symbol('Harry Potter');
