--- a/tagged-template-literals.html
+++ b/tagged-template-literals.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Tagged template literals</title>
+  <title>Tagged template literals!</title>
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
+  <h1>Tagged template literals!</h1>
 <script>
   const name = 'Ciro';
   const age = 2;
