--- a/template-literals.html
+++ b/template-literals.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Template literals</title>
+  <title>Template literals!</title>
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
+  <h1>Template literals!</h1>
 </body>
 <script>
   const posts = [{
