--- a/truthy-and-falsy.html
+++ b/truthy-and-falsy.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Truthy and falsy</title>
+  <title>Truthy and falsy!</title>
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
+  <h1>Truthy and falsy!</h1>
 <script>
 /*
 The following values are always falsy:
