--- a/hoisting.html
+++ b/hoisting.html
@@ -2,9 +2,11 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Hoisting</title>
+  <title>Hoisting!</title>
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
+  <h1>Hoisting!</h1>
 <script>
   /*
   variable declarations
