--- a/iterators-and-iterables.html
+++ b/iterators-and-iterables.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Iterators and iterables</title>
+  <title>Iterators and iterables!</title>
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
+  <h1>Iterators and iterables!</h1>
 <script>
   /*
   iterator: object with a next() method that returns { value, done }
