--- a/this.html
+++ b/this.html
@@ -2,9 +2,11 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>This</title>
+  <title>This!</title>
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
+  <h1>This!</h1>
 <main>
   <div class="square" id="square"></div>
   <div class="circle" id="circle"></div>
