--- a/try-catch-finally.html
+++ b/try-catch-finally.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Try catch finally</title>
+  <title>Try catch finally!</title>
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
+  <h1>Try catch finally!</h1>
 <script>
   try {
     consol.log('hi');
