--- a/variables.html
+++ b/variables.html
@@ -2,9 +2,11 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Variables</title>
+  <title>Variables!</title>
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
+  <h1>Variables!</h1>
 <script>
   var width = 100;
   var width = 200;
