--- a/classes.html
+++ b/classes.html
@@ -1,141 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Classes!</title>
-  <link href="style.css" rel="stylesheet">
-</head>
-<body>
-  <h1>Classes!</h1>
-<script>
-  /*
-  prototypal inheritance
-  */
-  
-  // function Animal (name, energy) {
-  //   // const this = Object.create(Animal.prototype);
+  <head>
+    <meta charset="UTF-8" />
+    <title>Classes!</title>
+    <link href="style.css" rel="stylesheet" />
+  </head>
+  <body>
+    <h1>Classes!</h1>
+    <script>
+      /**
+       * prototypal inheritance
+       */
 
-  //   this.name = name;
-  //   this.energy = energy;
+      function Animal(name, energy) {
+        // const this = Object.create(Animal.prototype);
 
-  //   // return this;
-  // }
+        this.name = name;
+        this.energy = energy;
 
-  // Animal.prototype.eat = function (amount) {
-  //   console.log(`${this.name} is eating.`);
-  //   this.energy += amount;
-  // }
-
-  // Animal.prototype.sleep = function (length) {
-  //   console.log(`${this.name} is sleeping.`);
-  //   this.energy += length;
-  // }
-
-  // Animal.prototype.play = function (length) {
-  //   console.log(`${this.name} is playing.`);
-  //   this.energy -= length;
-  // }
-
-  // const leo = new Animal('Leo', 7);
-  // const snoop = new Animal('Snoop', 10);
-  
-  /*
-  es6
-  */
-  
-  class Animal {
-    constructor(name, energy) {
-      this.name = name;
-      this.energy = energy;
-    }
-
-    eat(amount) {
-      console.log(`${this.name} is eating.`);
-      this.energy += amount;
-    }
-
-    sleep(length) {
-      console.log(`${this.name} is sleeping.`);
-      this.energy += length;
-    }
-
-    play(length) {
-      console.log(`${this.name} is playing.`);
-      this.energy -= length;
-    }
-
-    // setter
-    set nickName(value) {
-      this.nickNameValue = value.trim() ;
-    }
-
-    // getter
-    get nickName() {
-      if (this.nickNameValue) {
-        return this.nickNameValue.toUpperCase();
+        // return this;
       }
 
-      return 'Sorry, no nickname was setted...'
-    }
+      Animal.prototype.eat = function (amount) {
+        console.log(`${this.name} is eating.`);
+        this.energy += amount;
+      };
 
-    // isn't called on instances but on the class itself
-    static nextToEat(animals) {
-      const sortedByLeastEnergy = animals.sort((a, b) => a.energy - b.energy)
+      Animal.prototype.sleep = function (length) {
+        console.log(`${this.name} is sleeping.`);
+        this.energy += length;
+      };
 
-      return sortedByLeastEnergy[0].name;
-    }
-  }
+      Animal.prototype.play = function (length) {
+        console.log(`${this.name} is playing.`);
+        this.energy -= length;
+      };
 
-  const leo = new Animal('Leo', 7);
-  const snoop = new Animal('Snoop', 10);
+      const leo = new Animal("Leo", 7);
+      const snoop = new Animal("Snoop", 10);
+      leo.sleep();
+      snoop.play();
 
-  const friendsWithSugar = [];
-  const friendsWithoutSugar = new Array();
+      function Dog(name, energy) {
+        Animal.call(this, name, energy);
 
-  /*
-  extending classes
-  */
+        this.bark = function () {
+          console.log(`Bark! My name is ${this.name}`);
+        };
+      }
 
-  class Dog extends Animal {
-    constructor(name, energy, color) {
-      super(name, energy);
-      this.color = color;
-    }
+      Dog.prototype = Object.create(Animal.prototype);
 
-    bark() {
-      console.log(`Bark! My name is ${this.name}`);
-    }
-  }
+      const ciro = new Dog("Ciro", 10);
+      console.log(ciro.energy);
+      ciro.bark();
+      console.log(ciro.energy);
+      ciro.play(5);
+      console.log(ciro.energy);
 
-  const ciro = new Dog('Ciro', 20, 'brown');
+      /**
+       * es6
+       */
 
-  /*
-  extending array
-  */
+      // class Animal {
+      //   constructor(name, energy) {
+      //     this.name = name;
+      //     this.energy = energy;
+      //   }
 
-  class MovieCollection extends Array {
-    constructor(name, ...items) {
-      super(...items);
-      this.name = name;
-    }
+      //   eat(amount) {
+      //     console.log(`${this.name} is eating.`);
+      //     this.energy += amount;
+      //   }
 
-    add(movie) {
-      this.push(movie);
-    }
+      //   sleep(length) {
+      //     console.log(`${this.name} is sleeping.`);
+      //     this.energy += length;
+      //   }
 
-    topRated(limit = 10) {
-      return this
-        .sort((a, b) => (a.stars > b.stars ? -1 : 1))
-        .slice(0, limit);
-    }
-  }
+      //   play(length) {
+      //     console.log(`${this.name} is playing.`);
+      //     this.energy -= length;
+      //   }
 
-  const movies = new MovieCollection(
-    'Favourite movies',
-    { name: 'the big lebowski', stars: 5 },
-    { name: 'pizza birra faso', stars: 5 },
-    { name: 'the lobster', stars: 4 },
-  );
-</script>
-</body>
+      //   // setter
+      //   set nickName(value) {
+      //     this.nickNameValue = value.trim() ;
+      //   }
+
+      //   // getter
+      //   get nickName() {
+      //     if (this.nickNameValue) {
+      //       return this.nickNameValue.toUpperCase();
+      //     }
+
+      //     return 'Sorry, no nickname was setted...'
+      //   }
+
+      //   // isn't called on instances but on the class itself
+      //   static nextToEat(animals) {
+      //     const sortedByLeastEnergy = animals.sort((a, b) => a.energy - b.energy)
+
+      //     return sortedByLeastEnergy[0].name;
+      //   }
+      // }
+
+      // const leo = new Animal('Leo', 7);
+      // const snoop = new Animal('Snoop', 10);
+
+      // const friendsWithSugar = [];
+      // const friendsWithoutSugar = new Array();
+
+      // /**
+      //  * extending classes
+      //  */
+
+      // class Dog extends Animal {
+      //   constructor(name, energy, color) {
+      //     super(name, energy);
+      //     this.color = color;
+      //   }
+
+      //   bark() {
+      //     console.log(`Bark! My name is ${this.name}`);
+      //   }
+      // }
+
+      // const ciro = new Dog('Ciro', 20, 'brown');
+
+      /**
+       * extending array
+       */
+
+      // class MovieCollection extends Array {
+      //   constructor(name, ...items) {
+      //     super(...items);
+      //     this.name = name;
+      //   }
+
+      //   add(movie) {
+      //     this.push(movie);
+      //   }
+
+      //   topRated(limit = 10) {
+      //     return this
+      //       .sort((a, b) => (a.stars > b.stars ? -1 : 1))
+      //       .slice(0, limit);
+      //   }
+      // }
+
+      // const movies = new MovieCollection(
+      //   'Favourite movies',
+      //   { name: 'the big lebowski', stars: 5 },
+      //   { name: 'pizza birra faso', stars: 5 },
+      //   { name: 'the lobster', stars: 4 },
+      // );
+    </script>
+  </body>
 </html>
